# twilight-testnet-proxy

./: .env  .env.sample  .gitignore  README.md  docker-compose.yaml  subdomains.host
frontend/: .env.frontend  Dockerfile
nginx/: Dockerfile  default.conf  docker-entrypoint.sh  nginx.conf  nginx.conf.template  nginx.http-only.template  verify.js
nginx/rust_decode_rpc/: .env  Cargo.toml  Dockerfile
nginx/rust_decode_rpc/src/: main.rs
nyks_explorer/: Dockerfile  index.html  nginx.conf  nyks.json  nyks_testnet.json
nyks_explorer/faucet/: index.vue
nyks_faucet/: Dockerfile  config.js
nyks_faucet/faucet/: faucet.js  package.json
nyks_tx_decoder/: .env  Dockerfile
scripts/: issue-certs.sh
