[package]
name = "twilight-rpc-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.24.9", features = ["macros", "server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
cosmrs = "0.16"
base64 = "0.22"
bech32 = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"
anyhow = "1"
prost = "0.12"
